# icp

./: .gitignore  .header  .header.h  CMakeLists.txt  LICENSE  Makefile  README.txt  todo.org  zadanie.txt
examples/: example1  example2  example3  example4  example5  test1
src/: Computable.cpp  Computable.h  Doxyfile  block.cpp  block.h  block_graphics_object.cpp  block_graphics_object.h  blockeditor.pro  blockeditor.qrc  computable.cpp  computable.h  connection.cpp  connection.h  connection_graphics_object.cpp  connection_graphics_object.h  debug.cpp  debug.h  input.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  output.cpp  qrc_blockeditor.cpp  schema.cpp  schema.h  schema_area.cpp  schema_area.h  schema_view.h  ui_mainwindow.h
